fix scrolling on mobile

--- a/src/static/assets/css/custom.css
+++ b/src/static/assets/css/custom.css
@@ -39,8 +39,9 @@ p.lead.mission {
     }
 
     @media screen and (max-width: 768px) {
-        .slide {
-            backdrop-filter: blur(30px);
+        .slide:not(.active) {
+            filter: blur(20px);
+            backdrop-filter: unset;
         }
     }
 
